force-app/main/default/objects/File_Hub_Entry__c/File_Hub_Entry__c.object-meta.xml
<CustomObject>
    <description>Wrapper around ContentDocument that adds send/receive semantics, categorization, and record linkage for the File Hub feature.</description>
    <label>File Hub Entry</label>
    <nameField>
        <displayFormat>FH-{00000}</displayFormat>
        <label>Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Hub Entries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>