force-app/main/default/objects/File_Hub_Entry__c/fields/ContentDocument_Id__c.field-meta.xml
<CustomField>
    <fullName>ContentDocument_Id__c</fullName>
    <description>The Id of the underlying ContentDocument. Stored explicitly because ContentDocument is not a lookupable object via standard Salesforce relationships.</description>
    <externalId>true</externalId>
    <label>Content Document Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>