force-app/main/default/objects/File_Hub_Entry__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>Optional expiration date for time-sensitive documents (compliance forms, contracts, certifications). Drives the V2 "expiring soon" badge in the File Hub UI.</description>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>