force-app/main/default/objects/File_Hub_Entry__c/fields/File_Extension__c.field-meta.xml
<CustomField>
    <fullName>File_Extension__c</fullName>
    <description>Lowercased file extension (pdf, png, docx). Drives icon selection in the LWC without needing to call describe per row.</description>
    <label>File Extension</label>
    <length>20</length>
    <type>Text</type>
</CustomField>