force-app/main/default/objects/File_Hub_Entry__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <description>Display name of the underlying ContentDocument. Denormalised here so the LWC list can render without an extra SOQL on ContentDocument per row.</description>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>