force-app/main/default/objects/File_Hub_Entry__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Optional note from the sender to the recipient.</description>
    <label>Message</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>