force-app/main/default/objects/File_Hub_Entry__c/fields/Read__c.field-meta.xml
<CustomField>
    <fullName>Read__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marked true when the recipient first opens the entry in the File Hub Inbox.</description>
    <label>Read</label>
    <type>Checkbox</type>
</CustomField>