force-app/main/default/objects/File_Hub_Entry__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User this file was sent to. Null means it lives only in the sender's My Files tab.</description>
    <label>Recipient</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Files Received</relationshipLabel>
    <relationshipName>File_Hub_Entries_Received</relationshipName>
    <type>Lookup</type>
</CustomField>