force-app/main/default/objects/File_Hub_Entry__c/fields/Related_Loan__c.field-meta.xml
<CustomField>
    <fullName>Related_Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional link to a Loan record. When set, the file appears in the Loan's File Hub embed.</description>
    <label>Related Loan</label>
    <referenceTo>Loan__c</referenceTo>
    <relationshipLabel>File Hub Entries</relationshipLabel>
    <relationshipName>File_Hub_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>