force-app/main/default/objects/File_Hub_Entry__c/fields/Related_Reseller__c.field-meta.xml
<CustomField>
    <fullName>Related_Reseller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional link to a Reseller record. When set, the file appears in the Reseller's File Hub embed.</description>
    <label>Related Reseller</label>
    <referenceTo>Reseller__c</referenceTo>
    <relationshipLabel>File Hub Entries</relationshipLabel>
    <relationshipName>File_Hub_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>