force-app/main/default/objects/File_Hub_Entry__c/fields/Sender__c.field-meta.xml
<CustomField>
    <fullName>Sender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who uploaded the file. Defaults to the running user but stored explicitly so ownership transfers (e.g. employee leaves) don't break the audit trail.</description>
    <label>Sender</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Files Sent</relationshipLabel>
    <relationshipName>File_Hub_Entries_Sent</relationshipName>
    <type>Lookup</type>
</CustomField>