force-app/main/default/objects/File_Hub_Entry__c/fields/Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_Date__c</fullName>
    <description>Timestamp of the send action. Set by Apex on creation; not user-editable.</description>
    <label>Sent Date</label>
    <type>DateTime</type>
</CustomField>